--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.24.x']
+        go-version: ['1.22.x']
         platform: [linux-amd64, windows-amd64, darwin-amd64, darwin-arm64]
         include:
           - platform: linux-amd64
@@ -88,16 +88,20 @@ jobs:
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
+        with:
+          path: artifacts
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: |
-            databricks-mcp-linux-amd64/DatabricksMCP
-            databricks-mcp-windows-amd64.exe/DatabricksMCP.exe
-            databricks-mcp-darwin-amd64/DatabricksMCP
-            databricks-mcp-darwin-arm64/DatabricksMCP
+            artifacts/databricks-mcp-linux-amd64/DatabricksMCP
+            artifacts/databricks-mcp-windows-amd64.exe/DatabricksMCP.exe
+            artifacts/databricks-mcp-darwin-amd64/DatabricksMCP
+            artifacts/databricks-mcp-darwin-arm64/DatabricksMCP
           name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
