--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Generate Changelog
+        id: changelog
+        run: |
+          # Get the current tag
+          CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          echo "Current tag: $CURRENT_TAG"
+
+          # Get the previous tag
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 $CURRENT_TAG^ 2>/dev/null || echo "")
+
+          if [ -z "$PREVIOUS_TAG" ]; then
+            # If there's no previous tag, get all commits
+            echo "No previous tag found. Using all commits."
+            CHANGELOG=$(git log --pretty=format:"* %s (%h)" $CURRENT_TAG)
+          else
+            echo "Previous tag: $PREVIOUS_TAG"
+            # Get commits between the previous tag and the current tag
+            CHANGELOG=$(git log --pretty=format:"* %s (%h)" $PREVIOUS_TAG..$CURRENT_TAG)
+          fi
+
+          # Save changelog to output
+          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
+          echo "$CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -111,9 +138,10 @@ jobs:
           tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
           body: |
-            Release ${{ github.ref_name }} of DatabricksMCP
+            # Release ${{ github.ref_name }} of DatabricksMCP
 
-            See the commits for this release for more details.
+            ## Changelog
+            ${{ env.CHANGELOG }}
           draft: false
           prerelease: false
 
