--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,25 +21,25 @@ jobs:
             os: ubuntu-latest
             GOOS: linux
             GOARCH: amd64
-            binary_name: DatabricksMCP
+            binary_name: databricks-mcp
             asset_name: databricks-mcp-linux-amd64
           - platform: windows-amd64
             os: ubuntu-latest
             GOOS: windows
             GOARCH: amd64
-            binary_name: DatabricksMCP.exe
+            binary_name: databricks-mcp.exe
             asset_name: databricks-mcp-windows-amd64.exe
           - platform: darwin-amd64
             os: ubuntu-latest
             GOOS: darwin
             GOARCH: amd64
-            binary_name: DatabricksMCP
+            binary_name: databricks-mcp
             asset_name: databricks-mcp-darwin-amd64
           - platform: darwin-arm64
             os: ubuntu-latest
             GOOS: darwin
             GOARCH: arm64
-            binary_name: DatabricksMCP
+            binary_name: databricks-mcp
             asset_name: databricks-mcp-darwin-arm64
 
     steps:
@@ -138,7 +138,7 @@ jobs:
           tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
           body: |
-            # Release ${{ github.ref_name }} of DatabricksMCP
+            # Release ${{ github.ref_name }} of databricks-mcp
 
             ## Changelog
             ${{ env.CHANGELOG }}
@@ -151,7 +151,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/databricks-mcp-linux-amd64/DatabricksMCP
+          asset_path: artifacts/databricks-mcp-linux-amd64/databricks-mcp
           asset_name: databricks-mcp-linux-amd64
           asset_content_type: application/octet-stream
 
@@ -161,7 +161,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/databricks-mcp-windows-amd64.exe/DatabricksMCP.exe
+          asset_path: artifacts/databricks-mcp-windows-amd64.exe/databricks-mcp.exe
           asset_name: databricks-mcp-windows-amd64.exe
           asset_content_type: application/octet-stream
 
@@ -171,7 +171,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/databricks-mcp-darwin-amd64/DatabricksMCP
+          asset_path: artifacts/databricks-mcp-darwin-amd64/databricks-mcp
           asset_name: databricks-mcp-darwin-amd64
           asset_content_type: application/octet-stream
 
@@ -181,6 +181,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/databricks-mcp-darwin-arm64/DatabricksMCP
+          asset_path: artifacts/databricks-mcp-darwin-arm64/databricks-mcp
           asset_name: databricks-mcp-darwin-arm64
           asset_content_type: application/octet-stream
