Update version to 0.0.4 and adjust release permissions
Bump application version from 0.0.3 to 0.0.4 to reflect new updates. Added `write-all` permissions in the release workflow to ensure proper creation and management of releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,7 @@ jobs:
         path: ${{ matrix.binary_name }}
 
   release:
+    permissions: write-all
     name: Create Release
     needs: build
     runs-on: ubuntu-latest
